Add Support link to footer in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </main>
     <footer>
         <p>&copy; 2025 Pollock Properties Group. All Rights Reserved.</p>
-        <a href="terms_of_service.html">Terms of Service</a> | <a href="privacy_policy.html">Privacy Policy</a>
+        <a href="terms_of_service.html">Terms of Service</a> | <a href="privacy_policy.html">Privacy Policy</a> | <a href="support.html">Support</a>
     </footer>
 </body>
 </html>
