--- a/support.html
+++ b/support.html
@@ -1,91 +1,151 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PPG Preferred Vendors — Support</title>
-  <meta name="description" content="Support page for the PPG Preferred Vendors iOS app. Contact, FAQ, and form link for reporting bugs or requesting features."/>
-  <style>
-    :root{--bg:#f7f8fb;--card:#ffffff;--accent:#b7663a;--muted:#6b7280;--max:900px}
-    *{box-sizing:border-box}
-    body{font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;line-height:1.45;margin:0;background:linear-gradient(180deg,#f7f8fb, #ffffff);color:#111}
-    .container{max-width:var(--max);margin:48px auto;padding:24px}
-    header{display:flex;align-items:center;gap:16px}
-    .logo{width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#8f4b28);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700}
-    h1{margin:0;font-size:1.5rem}
-    p.lead{color:var(--muted);margin-top:6px}
-    .card{background:var(--card);padding:20px;border-radius:14px;box-shadow:0 6px 20px rgba(17,24,39,0.06);margin-top:20px}
-    .grid{display:grid;grid-template-columns:1fr;gap:16px}
-    .row{display:flex;gap:12px;flex-wrap:wrap}
-    .btn{display:inline-block;padding:10px 14px;border-radius:10px;background:var(--accent);color:#fff;text-decoration:none;font-weight:600}
-    .muted{color:var(--muted)}
-    .field{display:flex;flex-direction:column;gap:6px}
-    footer{margin-top:20px;color:var(--muted);font-size:0.9rem}
-    .faq dt{font-weight:600;margin-top:12px}
-    .iframeWrap{height:640px;border-radius:12px;overflow:hidden}
-    iframe{width:100%;height:100%;border:0}
-    @media(min-width:720px){.grid{grid-template-columns:1fr 360px}}
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PPG Preferred Vendors — Support</title>
+  <meta name="description" content="Support page for the PPG Preferred Vendors app. Contact, FAQ, and form link for reporting bugs or requesting features."/>
+  <style>
+    /* Core Variables */
+    :root{--bg:#f7f8fb;--card:#ffffff;--accent:#b7663a;--accent-dark:#8f4b28;--muted:#6b7280;--max:900px}
+    *{box-sizing:border-box}
+    
+    /* Typography & Layout */
+    body{
+      font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      line-height:1.5;
+      margin:0;
+      background:linear-gradient(180deg, var(--bg), #ffffff);
+      color:#111;
+      padding: 24px 0; /* Add vertical padding for mobile */
+    }
+    .container{
+      max-width:var(--max);
+      margin:0 auto;
+      padding:0 20px; /* Horizontal padding for mobile */
+    }
+    header{display:flex;align-items:center;gap:16px;margin-bottom:32px;}
+    .logo{
+      width:56px;
+      height:56px;
+      border-radius:12px;
+      background:linear-gradient(135deg,var(--accent),var(--accent-dark));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      color:#fff;
+      font-weight:700;
+      font-size: 1.25rem;
+      box-shadow: 0 4px 10px rgba(183, 102, 58, 0.4);
+    }
+    h1{margin:0;font-size:1.8rem}
+    p.lead{color:var(--muted);margin-top:4px;font-size:1.1rem;}
+    
+    /* Card & Action Styles */
+    .card{
+      background:var(--card);
+      padding:24px;
+      border-radius:16px;
+      box-shadow:0 8px 30px rgba(17,24,39,0.08);
+      margin-top:20px;
+      border: 1px solid rgba(229, 231, 235, 0.8);
+    }
+    .row{display:flex;gap:12px;flex-wrap:wrap;margin-top:16px;}
+    .btn{
+      display:inline-block;
+      padding:12px 18px;
+      border-radius:12px;
+      background:var(--accent);
+      color:#fff;
+      text-decoration:none;
+      font-weight:600;
+      transition: background 0.2s, transform 0.1s;
+      box-shadow: 0 4px 8px rgba(183, 102, 58, 0.3);
+    }
+    .btn:hover{
+      background: var(--accent-dark);
+      transform: translateY(-1px);
+    }
+    .btn:active{
+      transform: translateY(1px);
+    }
+    
+    /* Utility & Detail */
+    .muted{color:var(--muted);}
+    .faq dt{font-weight:700;margin-top:16px;color:#374151;font-size:1.05rem;}
+    .faq dd{margin-left: 0; margin-top: 4px; padding-bottom: 8px;}
+    ol{padding-left: 20px;}
+    ol li{margin-bottom: 8px;}
+    footer{margin-top:40px;color:var(--muted);font-size:0.9rem;text-align:center;}
+
+    /* Media Query for larger screens */
+    @media(min-width:720px){
+      h1{font-size:2rem;}
+      .container{padding: 48px 20px;}
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <div class="logo">PPG</div>
-      <div>
-        <h1>PPG Preferred Vendors — Support & Feedback</h1>
-        <p class="lead">Need help with the app? Use the form below to report bugs, request features, or contact support.</p>
-      </div>
-    </header>
+  <div class="container">
+    <!-- HEADER -->
+    <header>
+      <div class="logo">PPG</div>
+      <div>
+        <h1>PPG Preferred Vendors Support</h1>
+        <p class="lead">Have a question, found a bug, or need assistance? We're here to help you get the most out of the app.</p>
+      </div>
+    </header>
 
-    <div class="grid">
-      <main class="card">
-        <h2 style="margin-top:0">Contact & Support</h2>
-        <p class="muted">This page is intended for App Store reviewers and users to quickly reach the PPG Preferred Vendors support team.</p>
+    <!-- SECTION 1: QUICK ACTIONS -->
+    <div class="card">
+      <h2 style="margin-top:0; font-size: 1.5rem;">Need Help Fast?</h2>
+      <p class="muted">Start by reporting a bug or requesting a feature using the button below, or reach out to us directly via email.</p>
+      
+      <div class="row">
+        <!-- Replace the href below with your Google Form "Send" link or the shortened URL. -->
+        <a class="btn" href="https://forms.gle/3SpAvkP3uaqSXHP76" target="_blank" rel="noopener">Report a Bug or Request Feature</a>
+      </div>
+      
+      <!-- Explicit Email Link -->
+      <p style="margin-top: 20px;">
+        <strong>Email Support:</strong> 
+        <a href="mailto:vivianaugust.developer@gmail.com" style="color: var(--accent); text-decoration: underline; font-weight: 500;">vivianaugust.developer@gmail.com</a>
+      </p>
+    </div>
 
-        <section style="margin-top:14px">
-          <h3 style="margin-bottom:8px">Quick actions</h3>
-          <div class="row">
-            <!-- Replace the href below with your Google Form "Send" link or the shortened URL. -->
-            <a class="btn" href="https://forms.gle/3SpAvkP3uaqSXHP76" target="_blank" rel="noopener">Open Support Form</a>
-            <a class="btn" href="vivianaugust.developer@gmail.com">Email Support</a>
-          </div>
-        </section>
+    <!-- SECTION 2: REPORTING INSTRUCTIONS -->
+    <div class="card">
+      <h2 style="margin-top:0; font-size: 1.5rem;">How to Report a Problem</h2>
+      <p class="muted">To get the fastest resolution, please include the following information:</p>
+      <ol>
+        <li>Use the support form or email address above to start your request.</li>
+        <li>Include your **App Version** and **Device Model / Operating System** (e.g. "Version 1.0.2 — iPhone 14 Pro / iOS 18.6"). You can usually find the version number in the app's settings.</li>
+        <li>Describe the issue or suggestion clearly. Attaching a **screenshot** or **video** helps us reproduce the issue faster.</li>
+      </ol>
+    </div>
+    
+    <!-- SECTION 3: FAQ & EXPECTED RESPONSE -->
+    <div class="card">
+      <h2 style="margin-top:0; font-size: 1.5rem;">Additional Information</h2>
 
-        <section style="margin-top:18px">
-          <h3>How to report a problem</h3>
-          <ol>
-            <li>Open the support form (button above) or email us.</li>
-            <li>Include your <strong>app version</strong> and <strong>device model / iOS version</strong> (e.g. "Version 1.0.2 — iPhone 14 Pro / iOS 18.6").</li>
-            <li>Attach a screenshot if possible — it helps us reproduce the issue faster.</li>
-          </ol>
-        </section>
+      <h3>Expected Response Time</h3>
+      <p class="muted">We typically respond to all support requests within 2–3 business days. For urgent issues that prevent you from using the app, please include "URGENT" in the subject line of your email.</p>
 
-        <section style="margin-top:18px">
-          <h3>Expected response time</h3>
-          <p class="muted">We typically respond within 2–3 business days. For urgent security issues, please include "URGENT" in the subject line of your email.</p>
-        </section>
+      <h3 style="margin-top: 24px;">Privacy</h3>
+      <p class="muted">We only collect the information you provide to help troubleshoot and respond to support requests. We will not share personal data with third parties except as required by law.</p>
 
-        <section style="margin-top:18px">
-          <h3>Privacy</h3>
-          <p class="muted">We only collect the information you provide to help troubleshoot and respond to support requests. We will not share personal data with third parties except as required by law.</p>
-        </section>
+      <h3 style="margin-top: 24px;">Frequently Asked Questions</h3>
+      <dl class="faq">
+        <dt>What if I can’t sign in?</dt>
+        <dd class="muted">Try force-closing and relaunching the app. If the issue persists, please try reinstalling it. If you still can't sign in, use the support form and include the exact error message you are seeing.</dd>
+      </dl>
+    </div>
 
-        <section style="margin-top:18px">
-          <h3>FAQ</h3>
-          <dl class="faq">
-            <dt>What if I can’t sign in?</dt>
-            <dd class="muted">Try reinstalling the app. If the issue persists, send us the device log and a screenshot via the support form.</dd>
-            <dt>My screenshots were rejected by App Store — who do I contact?</dt>
-            <dd class="muted">Use the support form and include the rejection reason text you received from App Store Connect.</dd>
-          </dl>
-        </section>
 
-      </main>
-    </div>
-
-    <footer style="text-align:center;margin-top:28px">
-      <p class="muted">PPG Preferred Vendors — Support page • For issues related to App Store review, please use the support form link above.</p>
-    </footer>
-  </div>
+    <!-- FOOTER -->
+    <footer>
+      <p class="muted">PPG Preferred Vendors — Support page</p>
+    </footer>
+  </div>
 </body>
 </html>
